--- a/assets/css/style-en.css
+++ b/assets/css/style-en.css
@@ -1448,6 +1448,36 @@ body {
     margin-top: 30px;
 }
 
+
+.login-rigister {
+    text-align: left;
+  }
+  .login-rigister form .form-input {
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px;
+    border: 0;
+    border: 1px solid #ddd;
+  }
+  .login-rigister form .remember {
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }
+  .login-rigister form .btn {
+    color: #fff;
+    width: 100px;
+  }
+  .login-rigister form .btn-login {
+    background-color: #4f94e2;
+    border: 1px solid #4f94e2;
+    margin-bottom: 10px;
+  }
+  .login-rigister form .btn-rigister {
+    background-color: #d12d4a;
+    border: 1px solid #d12d4a;
+  }
+
 .department-card .active .card {
     background-color: #e9456b !important;
     color: #fff;
