--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,6 +214,7 @@ body {
   margin: auto;
   transition: all 0.5s ease-in-out;
   color: #000;
+  cursor: pointer;
 }
 .slider-card .slider-department-card .card:hover {
   background-color: #e9456b !important;
