--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -285,6 +285,7 @@ body {
       margin: auto;
       transition: all 0.5s ease-in-out;
       color: #000;
+      cursor: pointer;
 
       &:hover {
         background-color: #e9456b !important;
